alignment fixes to search page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,3 +46,39 @@
     @apply bg-background text-foreground;
   }
 }
+/* 
+@media (max-width: 768px) {
+  .react-flow__node {
+    width: 20vw !important;
+    height: 20vw !important;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .react-flow__node {
+    width: 10vw !important;
+    height: 10vw !important;
+  }
+}
+
+@media (min-width: 1025px) {
+  .react-flow__node {
+    width: 5vw !important;
+    height: 5vw !important;
+  }
+} */
+
+.container {
+  display: flex;
+  flex-wrap: wrap; /* Allows items to wrap */
+}
+
+.item {
+  flex: 1 1 50%; /* Grow, shrink, and set the base size to 50% */
+  max-width: 50%; /* Restricts maximum width to 50% */
+}
+
+.container.flex-col .item {
+  flex: 1 1 100%; /* In flex-col mode, make each item full width */
+  max-width: 100%;
+}
